<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanel">

    <TextView
        android:id="@+id/textPanel1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/bungee"
        android:text="@string/welcome_landlord"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/upload_your_house_details"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPanel1"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <EditText
            android:id="@+id/textPanel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:inputType="text"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/textPanel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginTop="25dp"
            android:textSize="20sp"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/textPanel4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:hint="@string/price"
            android:layout_marginTop="25dp"
            app:passwordToggleEnabled="true"
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_gravity="center"
            app:srcCompat="@mipmap/ic_launcher"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPanel4"
            android:contentDescription="@string/todo" />

        <Button
            android:id="@+id/btnPanel1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/button_shape"
            android:text="@string/choose_image"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnPanel2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_details"
            android:textAllCaps="false"
            android:background="@drawable/button_shape"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnPanel1"/>
        <Button
            android:id="@+id/btnPanel3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_house_list"
            android:textAllCaps="false"
            android:background="@drawable/button_shape"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/btnPanel2"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>