<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_house_siding_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_outline_monetization_on_24"
            android:title="@string/menu_Calculator" />

        <item
            android:id="@+id/links"
            android:icon="@drawable/ic_baseline_ondemand_video_24"
            android:title="Useful Links" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/logOut"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="LogOut" />
    </group>
</menu>