<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">
    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/animation"
        app:lottie_fileName="data.json"
        app:lottie_autoPlay="true"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageHouse"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/house_rental_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/getyourhavelilogo" />

        <EditText
            android:id="@+id/btnUsernameSgnIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageHouse"
            android:layout_marginTop="25dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/btnPasswordSgIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnUsernameSgnIn"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="240dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="254dp"
            android:layout_height="wrap_content"

            android:layout_gravity="center_horizontal"
            android:layout_marginTop="35dp"

            android:background="@drawable/button_shape"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnPasswordSgIn"
            app:rippleColor="#2196F3" />

        <Button
            android:id="@+id/btnSignUpSgn"
            android:layout_width="252dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="35dp"
            android:layout_gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            android:background="@drawable/button_shape"
            android:text="Sign Up"
            android:textAllCaps="false"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/adminPaneLink"
            android:layout_width="-200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignUpSgn"
            android:text="  "
            android:textAlignment="center"
            android:textColor="#858585"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>